[project]
name = "schwab-trading"
version = "0.1.0"
description = ""
authors = [
    { name = "Gaurav Agarwal" }
]
license-files = [
    "LICENSE"
]
readme = "README.md"
requires-python = ">=3.13,<4.0"

dependencies = [
    "fastapi (>=0.128.0,<0.129.0)",
    "uvicorn (>=0.40.0,<0.41.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "requests (>=2.32.5,<3.0.0)",
    "schwab-py (>=1.5.1,<2.0.0)",
]

[tool.poetry]
package-mode = false


[tool.poetry.group.dev.dependencies]
black = "^25.12.0"
pytest = "^9.0.2"



[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
